--- a/backend/solution/package.json
+++ b/backend/solution/package.json
@@ -10,6 +10,8 @@
   "author": "Jip Irfandy Janaprasetya",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "nodemon": "^1.19.1"
   }
 }
